# Longchamp-Budget

./: .gitignore  README.md  icon.xcf  package-lock.json  package.json
.github/: CODEOWNERS
.github/workflows/: github-actions-release.yml  publish.yml
src/: .gitignore  index.html  main.js  stimulus.min.js  styles.min.css  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: helper.rs  lib.rs  main.rs  repository.rs
src/_parts/_components/: _expense-create-item-sections.html  _expense-edit-item-sections.html  _expense-edit-item.html  _expense_style.css  _fq-edit-item.html  _fq-section-edit-item.html  _fq-section-fq.html  _fq-section.html  _matric_section_group_sum.html  _matrix_expense_style.css  _matrix_section.html  _matrix_section_expense.html  _matrix_section_expense_instance.html  _matrix_section_expense_instance_label_link.html  _matrix_section_fq_body.html  _matrix_section_fq_body_group.html  _matrix_section_fq_head.html  _matrix_section_fq_head_group.html  _matrix_section_fq_table.html  _matrix_section_fq_table_group.html  _matrix_section_global_total.html  _matrix_section_group_expense_instance.html  _matrix_section_group_total.html  _matrix_section_total.html  _matrix_section_total_per_member.html  _matrix_section_total_ratio.html  _matrix_style.css  _section-edit-item.html
src/_parts/_windows/: _expenses.html  _fqs.html  _help.html  _matrix.html  _qfs.html  _sections.html
