[package]
name = "budget"
version = "0.1.0"
description = "Budget"
authors = ["denis.bugeja@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "budget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-dialog = "2"
lazy_static = "1.5.0"
tauri-plugin-fs = "2.2.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }
uuid = { version = "1.11.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
itertools = "0.13.0"


[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
strip = true
opt-level = "z"   # or "s" depending of the project
lto = true
codegen-units = 1
panic = "abort"
